# rust-backend

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml
prisma/: schema.prisma
prisma/migrations/20241224161959_init/: migration.sql
prisma/migrations/20241225202452_photo_url_optional/: migration.sql
prisma/migrations/20241225204653_init/: migration.sql
prisma/migrations/20250103110950_init/: migration.sql
prisma/migrations/20250106120116_init/: migration.sql
prisma/migrations/20250107175634_init/: migration.sql
prisma/migrations/20250129175328_init/: migration.sql
prisma/migrations/20250201150044_init/: migration.sql
prompts/: language_learning_system_prompt.txt
src/: error.rs  extractor.rs  handler.rs  main.rs  middleware.rs  model.rs  response.rs  route.rs
src/handler/: auth.rs  health.rs  lesson.rs  mod.rs  user.rs
src/handlers/: health.rs  user.rs
src/middleware/: cache_header.rs  mod.rs  process_time.rs  request_id.rs  sync_user.rs  timestamp_guard.rs
src/model/: lesson.rs  mod.rs  user.rs
src/response/: generic.rs  mod.rs  models.rs
src/service/: llm.rs  mod.rs
src/util/: cache.rs  mod.rs  validator.rs
