[package]
name = "duolang"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tower = { version = "0.5", features = ["limit", "buffer", "timeout"] }
urlencoding = "2.1"
lazy_static = "1.5"
ahash = "0.8"
url = "2.5"
bb8 = "0.9"
bb8-redis = "0.20"
redis = { version = "0.28", features = ["tokio-comp", "tokio-native-tls-comp"] }
prisma-client-rust = { git = "https://github.com/koval01/prisma-client-rust", rev = "17fc1a8d5c2e44ea0bdb1535093b2b078d2de944", features = ["postgresql"] }
prisma-client-rust-cli = { git = "https://github.com/koval01/prisma-client-rust", rev = "17fc1a8d5c2e44ea0bdb1535093b2b078d2de944", features = ["postgresql"] }
tracing-subscriber = "0.3"
num_cpus = "1.16"
tracing = "0.1"
sentry = { version = "0.36", features = ["tracing"] }
sentry-tower = "0.36"
uuid = "1.11"
chrono = "0.4"
moka = { version = "0.12", features = ["future"] }
google-generative-ai-rs = { version = "0.3", features = ["beta"] }
anyhow = "1.0"

[dev-dependencies]
temp-env = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
