[package]
name = "duolang"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[dependencies]
axum = "0.8"
axum-extra = "0.10"
oauth-axum = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hmac = "0.12"
sha2 = "0.10"
tower = { version = "0.5", features = ["limit", "buffer", "timeout"] }
ahash = "0.8"
bb8 = "0.9"
bb8-redis = "0.20"
redis = { version = "0.28", features = ["tokio-comp", "tokio-native-tls-comp"] }
prisma-client-rust = { git = "https://github.com/koval01/prisma-client-rust", rev = "e29468d6d44419fe96086f486ad586f27bf29769", features = ["postgresql"] }
prisma-client-rust-cli = { git = "https://github.com/koval01/prisma-client-rust", rev = "e29468d6d44419fe96086f486ad586f27bf29769", features = ["postgresql"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.16"
tracing = "0.1"
sentry = { version = "0.36", features = ["tracing"] }
sentry-tower = "0.36"
uuid = { version = "1.12", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }
google-generative-ai-rs = { version = "0.3", features = ["beta"] }
anyhow = "1.0"
reqwest = "0.12"
jwt = "0.16"

[dev-dependencies]
temp-env = "0.3"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
