[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[dependencies]
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tower = { version = "0.5.2", features = ["limit", "buffer", "timeout"] }
bb8 = "0.9.0"
bb8-redis = "0.22"
redis = { version = "0.30", features = ["tokio-comp", "tokio-native-tls-comp"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
num_cpus = "1.16.0"
tracing = "0.1.41"
sentry = { version = "0.37.0", features = ["tracing"] }
sentry-tower = "0.37.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.15", features = ["gzip"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
